--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ springdoc.version=v1
 server.port=8081
 spring.security.user.name=user
 spring.security.user.password=1234
+
+springdoc.api-docs.path=/api-docs
